deployment/03-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: seat-code-challenge-route
  name: seat-code-challenge-route
spec:
  port:
    targetPort: 8090
  to:
    kind: Service
    name: seat-code-challenge-service
    weight: 100
